# FIAM-hack

./: .gitignore  README.md  cumulative_portfolio_values.csv  final_output.csv  final_output_20241001_202812.csv  oos_predictions_20240929_135802.csv  optimal_weights.csv  pyproject.toml
GitGud/: csv_functions.py  portfolio_analysis.py
src/fiam_hack/: LSTM.py  LSTM_by_gpt.py  LSTM_rd.py  __init__.py  __main__.py  csv_filter.py  csv_transformer.py  evaluate.py  feature_extraction.py  for_ronald.py  penalized_linear_hackathon.py  portfolio_optimization.py  printing.py  r2calc.py  rd_feature_importance.py  results.csv  simulation.py
submission_folder/: cumulative_portfolio_values.csv  feature_selection.py  lstm.py  main.py  optimization.py  portfolio_analysis.py  simulation.py
submission_folder/csv/: results.csv
