[project]
name = "fiam-hack"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "angelachenn", email = "angela.c1331@gmail.com" }
]
dependencies = [
    "sklearn-preprocessing>=0.1.0",
    "pandas>=2.2.2",
    "scikit-learn>=1.5.2",
    "statsmodels>=0.14.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"fiam-hack" = "fiam_hack:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/fiam_hack"]
